--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "echo lint",
+    "tsc": "echo tsc",
     "prepare": "husky install"
   },
   "dependencies": {
