--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           status: starting
           channel: '#workflows'
+          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           message: Starting Docker Build and Push...
         if: always()
       - uses: actions/checkout@v3
@@ -51,5 +52,6 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
+          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           channel: '#workflows'
         if: always()
