--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -11,13 +11,6 @@ jobs:
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_INCOMING_URL }}
     steps:
-      - uses: act10ns/slack@v2
-        with:
-          status: starting
-          channel: '#workflows'
-          webhook-url: ${{ env.SLACK_WEBHOOK_URL }}
-          message: Starting Docker Build and Push...
-        if: always()
       - uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -48,10 +41,24 @@ jobs:
 
         if: ${{ always() }}
 
-      - uses: act10ns/slack@v2
+      - name: Send custom JSON data to Slack workflow
+        id: slack
+        uses: slackapi/slack-github-action@v1.24.0
         with:
-          status: ${{ job.status }}
-          steps: ${{ toJson(steps) }}
-          webhook-url: ${{ env.SLACK_WEBHOOK_URL }}
-          channel: '#workflows'
-        if: always()
+          # For posting a rich message using Block Kit
+          payload: |
+            {
+              "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_INCOMING_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
