--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "echo build",
     "start": "next start",
     "lint": "echo lint",
     "tsc": "echo tsc",
