--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -1,6 +1,6 @@
 # test.yml
 
-name: 'test-push'
+name: "test-push"
 
 on: push
 
@@ -22,7 +22,7 @@ jobs:
         with:
           path: node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json') }}
-      
+
       - name: Install Dependencies
         if: steps.cach.outputs.cache-hit != 'true'
         run: npm install
@@ -30,7 +30,7 @@ jobs:
       - run: npm run lint
 
         if: ${{ always() }}
-      
+
       - run: npm run tsc
 
         if: ${{ always() }}
