--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -9,6 +9,12 @@ jobs:
     name: Test build
     runs-on: ubuntu-latest
     steps:
+      - uses: act10ns/slack@v2
+        with:
+          status: starting
+          channel: "#workflows"
+          message: Starting Docker Build and Push...
+        if: always()
       - uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -42,5 +48,6 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
+          channel: "#workflows"
           webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
-          if: always()
+        if: always()
