--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -1,12 +1,17 @@
 # test.yml
 
-name: "Automation CI/CD WorkFlow"
+name: "Test Before Merge"
 
-on: pull_request
+on: 
+  pull_request:
+    types:
+      - opened
+    branches:
+      - 'main/**'
 
 jobs:
   test:
-    name: Check Test, Lint, Type, Build
+    name: Lint, Type, Build Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -26,15 +31,15 @@ jobs:
         run: npm install
 
       - run: npm run lint
-        id: Lint
+        id: Lint Check
         if: ${{ always() }}
 
       - run: npm run tsc
-        id: TypeCheck
+        id: Type Check
         if: ${{ always() }}
 
       - run: npm run build
-        id: Build
+        id: Build Check
         if: ${{ always() }}
         
       - uses: act10ns/slack@v2
