--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install Pnpm global
+        run: npm i -g pnpm
       - name: Install Vercel CLI
         run: pnpm i -g vercel@latest
       - name: Pull Vercel Environment Information
