--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Pnpm global
         run: npm i -g pnpm
+      - name: Install Pnpm global
+        run: npm i -g pnpm
       - name: Install Dependencies
-        run: pnpm install
+        run: pnpm install 
       - name: Install Vercel CLI
         run: pnpm add -g vercel@latest
       - name: Pull Vercel Environment Information
