--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-versions: ${{ secrets.NODE_VERSION }}
       - name: Setup Pnpm Environment
-      - uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v2
         with:
           version: 6.0.2
       - name: Install Vercel CLI
