--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -16,12 +16,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-versions: ${{ secrets.NODE_VERSION }}
-      - name: Cache node modules
+          
+      - name: Cache node_modules
         uses: actions/cache@v2
-        id: cache
         with:
-          path: node_modules
-          key: npm-packages-${{ hashFiles('**/package-lock.json') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+          # 변경된 package-lock.json 파일이나 package.json 파일이 있을 때만 캐시 업데이트
+          if: steps.setup-node.outputs.cache-hit != 'true'
 
       - name: Install Dependencies
         if: steps.cach.outputs.cache-hit != 'true'
