--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-versions: ${{ secrets.NODE_VERSION }}
 
+      ## pnpm Cache
       - name: Cache pnpm
         uses: actions/cache@v2
         with:
