--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -16,17 +16,17 @@ jobs:
           node-versions: ${{ secrets.NODE_VERSION }}
 
       ## pnpm Cache
-      #- name: Cache pnpm
-      #  uses: actions/cache@v2
-      #  with:
-      #    path: ~/.pnpm-store
-      #    key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-      #    restore-keys: |
-      #      ${{ runner.os }}-pnpm-
-      #    if: steps.setup-node.outputs.cache-hit != 'true'
+      - name: Cache pnpm
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+          if: steps.setup-node.outputs.cache-hit != 'true'
 
       - name: Install Dependencies
-        # if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           npm install -g pnpm
           pnpm install
