--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "13.4.3",
     "next-auth": "4.21.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "type-fest": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -30,8 +31,8 @@
     "@typescript-eslint/parser": "^5.59.7",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
     "prettier": "^2.8.8",
-    "typescript": "5.0.4",
-    "husky": "^8.0.0"
+    "typescript": "5.0.4"
   }
 }
