--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -53,3 +53,10 @@ jobs:
         run: |
           pnpm build
         if: ${{ always() }}    
+      - uses: actions/slack@v2
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: "#workflows"
+          webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
+        if: always()
