--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -18,6 +18,13 @@ jobs:
         node-versions: [18.x]
     steps:
       # Action 준비
+      - uses: act10ns/slack@v2
+        with:
+          status: starting
+          channel: '#workflows'
+          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          message: Starting Docker Build and Push...
+        if: always()
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -53,10 +60,10 @@ jobs:
         run: |
           pnpm build
         if: ${{ always() }}    
-      - uses: actions/slack@v2
+      - uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-          channel: "#workflows"
-          webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
+          channel: '#workflows'
+          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: always()
