--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -47,6 +47,7 @@ jobs:
 
       - uses: actions/cache@v3
         name: Setup pnpm cache
+        id: Cache Work
         with:
           path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
@@ -57,6 +58,7 @@ jobs:
         run: pnpm install
 
       - name: Build Test
+        id: Build Test
         run: |
           pnpm build
         if: ${{ always() }}    
