--- a/.github/config/slack.yml
+++ b/.github/config/slack.yml
@@ -7,9 +7,9 @@ title_link: https://support.github.com
 text: |
   *<{{workflowRunUrl}}|Workflow _{{workflow}}_ job _{{jobName}}_ triggered by _{{eventName}}_ is _{{jobStatus}}_>* 
   
-  *{{#if description}}<{{diffUrl}}|`{{diffRef}}`>*
+  *Commit Message*
+  - {{description}}
   
-  - Commit Message: {{description}}{{/if}}
   {{#if payload.commits}}
   *Commits*
   {{#each payload.commits}}
