--- a/.github/config/slack.yml
+++ b/.github/config/slack.yml
@@ -6,10 +6,7 @@ title_link: https://support.github.com
 
 text: |
   *<{{workflowRunUrl}}|Workflow _{{workflow}}_ job _{{jobName}}_ triggered by _{{eventName}}_ is _{{jobStatus}}_>* 
-  
-  *Commit Message*
-  - {{description}}
-  
+
   {{#if payload.commits}}
   *Commits*
   {{#each payload.commits}}
@@ -20,20 +17,20 @@ text: |
 fallback: |-
   [GitHub] {{workflow}} #{{runNumber}} {{jobName}} is {{jobStatus}}
 
-fields:
+fields: |
   - title: "💼 Job Steps"
-    value: "{{#each jobSteps}}{{icon this.outcome}} {{@key}}\n{{/each}}"
+    value: "{{#each jobSteps}}{{icon this.outcome}} {{@key}}\n\n{{/each}}"
     short: false
-  - title: 📝 Workflow
+  - title: "\n📝 Workflow"
     value: "<{{workflowUrl}}|{{workflow}}>"
     short: true
-  - title: 🔎 Git Ref
+  - title: "\n🔎 Git Ref"
     value: "<{{refUrl}}|`{{ref}}`> ({{refType}})"
     short: true
-  - title: 🧑‍💻 Actor
+  - title: "\n🧑‍💻 Actor"
     value: "{{actor}}"
     short: true
-  - title: ⛅ Job Status
+  - title: "\n⛅ Job Status"
     value: "{{jobStatus}}"
     short: true
 
