--- a/.github/config/slack.yml
+++ b/.github/config/slack.yml
@@ -19,7 +19,7 @@ fallback: |-
 
 fields:
   - title: 💼 Job Steps
-    value: "{{#each jobSteps}}{{icon this.outcome}} {{@key}}\n{{/each}}\n"
+    value: "{{#each jobSteps}}{{icon this.outcome}} {{@key}}\n\n{{/each}}"
     short: false
   - title: 📝 Workflow
     value: "<{{workflowUrl}}|{{workflow}}>"
