--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -10,7 +10,54 @@ on:
     branches:
       - main  # main 브랜치로의 pull request에서 실행
 jobs:
-  test:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-versions: [18.x]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # 
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: false
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        id: Cache-Work
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Lint
+        id: Lint-Check
+        run: pnpm lint
+
+      - name: Type
+        id: Type-Check
+        run: pnpm typecheck
+
+  build:
     name: Build Test
     runs-on: ubuntu-latest
     strategy:
@@ -62,11 +109,20 @@ jobs:
         run: |
           pnpm build
         if: ${{ always() }}    
+
+  notify-slack:
+    name: Notify Slack
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+      - build
+
+    steps:
+      - name: Notify Slack - All Jobs Completed
       - uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-          channel: '#workflows'
           webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
           config: .github/config/slack.yml
         if: always()
