--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -119,7 +119,7 @@ jobs:
 
     steps:
       - name: Notify Slack - All Jobs Completed
-      - uses: act10ns/slack@v2
+        uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
