--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -125,12 +125,18 @@ jobs:
       - name: Set Failed Status if Either Job Failed
         if: failure() # lint 또는 build 중 하나라도 실패했을 때
         run: echo "Failed"
-        
+
+      - name: Prepare Steps Info
+        id: prepare-steps
+        run: |
+          steps_info="{\"lint\": ${{ toJson(needs.lint.steps) }}, \"build\": ${{ toJson(needs.build.steps) }}"
+          echo "::set-output name=steps-info::$steps_info"
+
       - name: Notify Slack - All Jobs Completed
         uses: act10ns/slack@v2
         with:
-          status: ${{ job.status }}
-          steps: ${{ toJson(steps) }}
+          status: ${{ steps.set-status.outputs.set-status }}
+          steps: ${{ steps.prepare-steps.outputs.steps-info }}
           webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
           config: .github/config/slack.yml
         if: always()
