--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -136,7 +136,7 @@ jobs:
         uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
-          steps: ${{ steps.prepare-steps.outputs.steps-info }}
+          steps: ${{ toJson(steps.prepare-steps.outputs.steps-info) }}
           webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
           config: .github/config/slack.yml
         if: always()
