--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -129,14 +129,14 @@ jobs:
       - name: Prepare Steps Info
         id: prepare-steps
         run: |
-          steps_info="\"lint\": ${{ toJson(needs.lint.steps) }}, \"build\": ${{ toJson(needs.build.steps) }"
+          steps_info="{\"lint\": ${{ toJson(needs.lint.steps) }}, \"build\": ${{ toJson(needs.build.steps) }}}"
           echo "::set-output name=steps-info::$steps_info"
           
       - name: Notify Slack - All Jobs Completed
         uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
-          steps: ${{ toJson(steps.prepare-steps.outputs.steps-info) }}
+          steps: ${{ steps.prepare-steps.outputs.steps-info }}
           webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
           config: .github/config/slack.yml
         if: always()
