--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,24 @@ jobs:
         with:
           node-versions: ${{ secrets.NODE_VERSION }}
       - name: Setup Pnpm Environment
-        uses: pnpm/action-setup@v2
         with:
-          version: 6.0.2
+          version: 8
+          run_install: false
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        id: Cache-Work
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: v1-cli-${{ runner.os }}-${{ hashFiles('vercel.json') }}
+          restore-keys: |
+            v1-cli-${{ runner.os }}-
+
       - name: Install Vercel CLI
         run: pnpm add -g vercel@latest
       - name: Pull Vercel Environment Information
