--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-versions: ${{ secrets.NODE_VERSION }}
-      - name: Setup Pnpm Environment
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
         with:
           version: 8
           run_install: false
