--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,12 @@ jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-versions: ${{ secrets.NODE_VERSION }}
-      - uses: pnpm/action-setup@v2
+          node-versions: [18.x]
+      - uses: pnpm/action-setup@v3
         name: Install pnpm
         with:
           version: 8
@@ -31,7 +31,7 @@ jobs:
 
       - uses: actions/cache@v3
         name: Setup pnpm cache
-        id: Cache-Work
+        id: cache
         with:
           path: ${{ env.STORE_PATH }}
           key: v1-cli-${{ runner.os }}-${{ hashFiles('vercel.json') }}
@@ -39,7 +39,9 @@ jobs:
             v1-cli-${{ runner.os }}-
 
       - name: Install Vercel CLI
+        if: if: steps.cache.outputs.cache-hit != 'true'
         run: pnpm add -g vercel@latest
+
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
