--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
             v1-cli-${{ runner.os }}-
 
       - name: Install Vercel CLI
-        if: if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: pnpm add -g vercel@latest
 
       - name: Pull Vercel Environment Information
