--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -8,56 +8,9 @@ on:
       - opened # pull request가 열린 경우에만 실행
       - synchronize
     branches:
-      - main  # main 브랜치로의 pull request에서 실행
+      - main # main 브랜치로의 pull request에서 실행
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-versions: [18.x]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      # 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        with:
-          version: 8
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        id: Cache-Work
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Lint
-        id: Lint-Check
-        run: pnpm lint
-
-      - name: Type
-        id: Type-Check
-        run: pnpm typecheck
-
-  build:
+  test:
     name: Build Test
     runs-on: ubuntu-latest
     strategy:
@@ -69,13 +22,12 @@ jobs:
         with:
           status: starting
           webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
-          message: "📣 Opened Pull Request & Code Test Start\n<${{ github.event.pull_request.html_url }}|🚀 View Pull Request>"
-          
+          message: "📣 Opened Pull Request & Build Test Start\n<${{ github.event.pull_request.html_url }}|🚀 View Pull Request>"
         if: always()
+
       - name: Checkout
         uses: actions/checkout@v3
 
-      # 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -104,39 +56,27 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Lint Test
+        id: Lint-Test
+        run: pnpm lint
+        if: ${{ always() }}
+
+      - name: Type Check
+        id: Type-Check
+        run: pnpm typecheck
+        if: ${{ always() }}
+
       - name: Build Test
         id: Build-Test
         run: |
           pnpm build
-        if: ${{ always() }}    
+        if: ${{ always() }}
 
-  notify-slack:
-    name: Notify Slack
-    runs-on: ubuntu-latest
-    needs:
-      - lint
-      - build
-
-    steps:
-      - name: Check Lint and Build Status
-        id: check-status
-        run: echo "Success" # 디폴트로 성공으로 설정
-
-      - name: Set Failed Status if Either Job Failed
-        if: failure() # lint 또는 build 중 하나라도 실패했을 때
-        run: echo "Failed"
-
-      - name: Prepare Steps Info
-        id: prepare-steps
-        run: |
-          steps_info="\"lint\": ${{ toJson(needs.lint.steps) }}, \"build\": ${{ toJson(needs.build.steps) }}"
-          echo "::set-output name=steps-info::$steps_info"
-          
-      - name: Notify Slack - All Jobs Completed
-        uses: act10ns/slack@v2
+      - uses: act10ns/slack@v2
         with:
           status: ${{ job.status }}
-          steps: ${{ toJson(steps.prepare-steps.outputs.steps-info) }}
+          steps: ${{ toJson(steps) }}
+          channel: "#workflows"
           webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
           config: .github/config/slack.yml
         if: always()
