--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -40,6 +40,15 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
 
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        id: Cache-Work
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies
         run: pnpm install
 
