--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Build Test
         id: Build-Test
         run: |
-          pnpm build
+          pnpm build --if-present
         if: ${{ always() }}
 
       - uses: act10ns/slack@v2
